.config/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-f5
  annotations:
    nginx.org/proxy-buffer-size: 32k
    nginx.org/proxy-buffers: "4 64k"
    nginx.org/proxy-busy-buffers-size: 128k
    nginx.org/proxy-read-timeout: "3600s"
    nginx.org/proxy-send-timeout: "3600s"
    nginx.org/max-fails: "10"
    nginx.org/fail-timeout: "30s"
    nginx.org/websocket-services: "worker-prod,worker-next"
    nginx.org/server-snippets: |
      error_page 502 =503 /503.html;
      error_page 503 /503.html;

      location = /503.html {
          root /etc/nginx/error-pages;
          internal;
      }
spec:
  ingressClassName: f5-nginx
  rules:
    - host: "next.vatsim-radar.com"
      http:
        paths:
          - pathType: Prefix
            path: "/ws"
            backend:
              service:
                name: worker-next
                port:
                  number: 8880
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-next
                port:
                  number: 3000
    - host: "vatsim-radar.com"
      http:
        paths:
          - pathType: Prefix
            path: "/ws"
            backend:
              service:
                name: worker-prod
                port:
                  number: 8880
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-prod
                port:
                  number: 3000
    - host: "do.vatsim-radar.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app
                port:
                  number: 3000
    - host: "data.vatsim-radar.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: data
                port:
                  number: 3000
